syntax = "proto3";

package authproto;

// Defines the import path that should be used to import the generated package,
// and the package name.
option go_package = "github.com/xdorro/golang-grpc-base-project/pkg/proto/v1/auth;authproto";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "google/rpc/status.proto";

// Here is the overall greeting service definition where we define all our endpoints
service AuthService {
  rpc Login (LoginRequest) returns (TokenResponse) {
    option (google.api.http) = {
      post: "/v1/auth/token"
      body: "*"
    };
  }

  rpc RevokeToken (TokenRequest) returns (google.rpc.Status) {
    option (google.api.http) = {
      post: "/v1/auth/revoke_token"
      body: "*"
    };
  }

  rpc RefreshToken (TokenRequest) returns (TokenResponse) {
    option (google.api.http) = {
      post: "/v1/auth/refresh_token"
      body: "*"
    };
  }
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message TokenResponse {
  string token_type = 1;
  string access_token = 2;
  int64 access_expire = 3;
  string refresh_token = 4;
  int64 refresh_expire = 5;
}

message TokenRequest {
  string token = 1;
}